fix: stabilization of login flow and backend infrastructure
- Fixed login redirect loop by correcting session token retrieval in MainLayout.tsx
- Switched backend loader to 'tsx' for better Node 20+ and ESM stability
- Added 'superadmin' role support to unlock SaaS management features
- Implemented system-default tenant seeding for proper account validation
- Fixed bcryptjs and jsonwebtoken import issues in ESM environment
- Corrected database initialization order and missing tables
- Added detailed debug logging for troubleshooting future auth issues
- Updated .gitignore to exclude sensitive data and WhatsApp sessions

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,18 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Project specific
+.env
+.env.*
+! .env.example
+data/
+auth_info/
+auth_info_*/
+backups/
+uploads/
+test_conversations.db
+*.db
+*.sqlite
+.agent/
+.kiro/
