--- a/package.json
+++ b/package.json
@@ -4,16 +4,66 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "ts-node src/index.ts",
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "web:dev": "vite",
+    "web:build": "vite build",
+    "web:preview": "vite preview"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.10.2",
+    "@hapi/boom": "^10.0.1",
+    "@sentry/node": "^10.32.1",
+    "@whiskeysockets/baileys": "^6.5.0",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "bullmq": "^5.66.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "groq-sdk": "^0.3.2",
+    "helmet": "^8.1.0",
+    "ioredis": "^5.9.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
+    "openai": "^4.20.1",
+    "otplib": "^12.0.1",
     "pdf-parse": "^2.4.5",
-    "vue": "^3.5.24"
+    "pg": "^8.11.3",
+    "pino": "^10.1.0",
+    "qrcode": "^1.5.4",
+    "qrcode-terminal": "^0.12.0",
+    "sharp": "^0.34.5",
+    "socket.io": "^4.7.2",
+    "uuid": "^13.0.0",
+    "vue": "^3.5.24",
+    "winston": "^3.10.0",
+    "xlsx": "^0.18.5",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^20.5.9",
+    "@types/nodemailer": "^7.0.4",
+    "@types/pdf-parse": "^1.1.5",
+    "@types/pg": "^8.10.2",
+    "@types/pino": "^7.0.4",
+    "@types/qrcode": "^1.5.6",
+    "@types/qrcode-terminal": "^0.12.2",
+    "@types/sharp": "^0.31.1",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "tsx": "^4.21.0",
+    "typescript": "^5.2.2",
     "vite": "^7.2.4"
   }
 }
